feat: :bricks: Expanded remaining resource pages. Changed TAing to employment.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -91,9 +91,9 @@ import GRCLogo from '../assets/GRC_Logo.png'
 						>Scholarship/Award/Grant Application Support</a
 					>
 					<a
-						href="/resources/teaching-assistantships"
+						href="/resources/employment"
 						class="block px-4 py-2 text-slate-800 hover:bg-slate-200"
-						aria-label="View Teaching Assistantships resources">Teaching Assistantships</a
+						aria-label="View Employment resources">Employment</a
 					>
 					<a
 						href="/resources/career-planning-exploration"
@@ -200,7 +200,7 @@ import GRCLogo from '../assets/GRC_Logo.png'
 							aria-label="View Scholarship/Award/Grant Application Support resources"
 							>Scholarship/Award/Grant Application Support</a
 						>
-						<a href="/resources/teaching-assistantships" class="block py-2 pl-6 text-slate-800 hover:bg-slate-200"
+						<a href="/resources/employment" class="block py-2 pl-6 text-slate-800 hover:bg-slate-200"
 							>Teaching Assistantships</a
 						>
 						<a
