--- a/src/pages/resources/housing.astro
+++ b/src/pages/resources/housing.astro
@@ -8,7 +8,7 @@ const posts = (await getCollection('blog'))
 	.sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf())
 ---
 
-<BaseLayout title="Housing">
+<BaseLayout title="GRC - Housing">
 	<main class="container mx-auto min-h-screen px-4 py-8">
 		<h1 class="mb-8 text-center text-4xl font-bold">Housing</h1>
 
