feat: :rocket: Added Pagefind feature
Created a modal which features Pagefind functionality. Updated some dependencies.

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -52,9 +52,9 @@ const {
 <!-- Enhanced SEO Meta Tags -->
 <meta
 	name="keywords"
-	content="UofT, University of Toronto, Faculty of Medicine, Graduate Students, GRC, Graduate Representation Committee, Medical Sciences, Graduate Education"
+	content="UofT, University of Toronto, Faculty of Medicine, Graduate Students, GRC, Graduate Representation Committee, Medical Sciences, Graduate Education, Student Resources"
 />
-<meta name="author" content="Graduate Representation Committee, Faculty of Medicine" />
+<meta name="author" content="Graduate Representation Committee (GRC), Faculty of Medicine" />
 <meta name="language" content="English" />
 
 <!-- Organization Schema -->
