--- a/src/pages/resources/index.astro
+++ b/src/pages/resources/index.astro
@@ -18,7 +18,7 @@ import { prettifyTag } from '../../utils/strings'
 								class="focus-visible:ring-3 block focus:outline-none focus-visible:ring-blue-500 focus-visible:ring-offset-2"
 							>
 								<Image
-									src={`/uoft-placeholder-default.jpg`}
+									src={`/uoft-placeholder-default.webp`}
 									alt={tag as string}
 									width={720}
 									height={360}
