feat: :sparkles: Added blog post about HBFA
Additionally, refactors about.astro into an astro folder and index.astro for future changes.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -111,7 +111,7 @@ import SearchModal from './SearchModal.astro'
 			<!-- Search button -->
 			<button
 				@click="$dispatch('open-search')"
-				class="flex items-center gap-2 text-slate-800 px-2 py-1"
+				class="flex items-center gap-2 px-2 py-1 text-slate-800"
 				aria-label="Open search"
 			>
 				<Icon name="mdi:magnify" class="h-8 w-8" />
