--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -1,8 +1,8 @@
 ---
 import { Image } from 'astro:assets'
-import GRC_Hero from '../assets/GRC_Hero.png'
-import BaseLayout from '../layouts/BaseLayout.astro'
-import Accordion, { type ProfileAccordionItem } from '../components/ProfileAccordion.astro'
+import GRC_Hero from '../../assets/GRC_Hero.png'
+import BaseLayout from '../../layouts/BaseLayout.astro'
+import Accordion, { type ProfileAccordionItem } from '../../components/ProfileAccordion.astro'
 
 const teamData: ProfileAccordionItem[] = [
 	// ... other years and profiles
