--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -239,7 +239,12 @@ import SearchModal from './SearchModal.astro'
 
 		<!-- Social icons -->
 		<div class="hidden space-x-4 md:flex">
-			<a href="/" target="_blank" class="text-slate-800" aria-label="Follow UofT FoM GRC on Instagram">
+			<a
+				href="https://www.instagram.com/grc_uoftfacmed/"
+				target="_blank"
+				class="text-slate-800"
+				aria-label="Follow UofT FoM GRC on Instagram"
+			>
 				<span class="sr-only">Follow UofT FoM GRC on Instagram</span>
 				<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" class="fill-current">
 					<path
