--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -4,6 +4,7 @@ import BaseLayout from '../../layouts/BaseLayout.astro'
 import BlogPostCard from '../../components/BlogPostCard.astro'
 
 const posts = (await getCollection('blog')).sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf())
+console.log("index.astro ~ posts:", posts);
 
 // Group posts by month and year
 const groupedPosts = posts.reduce(
