--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -12,7 +12,7 @@ const isActive = href === pathname || href === '/' + subpath?.[0]
 
 <a
 	href={href}
-	class:list={[className, { 'font-bold underline': isActive }]}
+	class:list={[className, { 'font-semibold after:scale-x-100!': isActive }]}
 	{...props}
 	aria-current={isActive ? 'page' : undefined}
 	aria-label={props['aria-label'] || 'Go to ' + href}
