--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,9 +11,11 @@ import HelpingStudents from '../assets/HelpingStudents.png'
 ---
 
 <BaseLayout title={SITE_TITLE} description={SITE_DESCRIPTION}>
-	<main class="text-justify">
+	<main
+		class="container mx-auto flex w-full flex-col items-center overflow-hidden rounded-xl my-2 text-justify shadow-lg"
+	>
 		<!-- Main Hero -->
-		<section class="fade-in-section relative h-[50vh] min-h-[300px] w-full">
+		<section class="fade-in-section relative h-[50vh] min-h-[300px] w-full rounded-t-xl">
 			<div class="absolute inset-0 bg-black/50 backdrop-blur-sm"></div>
 			<div class="relative h-full w-full">
 				<Image
@@ -36,7 +38,7 @@ import HelpingStudents from '../assets/HelpingStudents.png'
 		</section>
 
 		<!-- Data-Driven Section -->
-		<section class="fade-in-section relative flex min-h-[30rem] w-full items-center bg-gray-800 py-20">
+		<section class="fade-in-section relative flex min-h-120 w-full items-center bg-gray-800 py-20">
 			<div class="container mx-auto px-4">
 				<div class="flex flex-col items-center gap-8 md:flex-row">
 					<div class="fade-in-text prose md:w-1/2">
@@ -60,7 +62,7 @@ import HelpingStudents from '../assets/HelpingStudents.png'
 		</section>
 
 		<!-- Accomplishments Section -->
-		<section class="fade-in-section relative flex min-h-[30rem] w-full items-center bg-slate-100 py-20">
+		<section class="fade-in-section relative flex min-h-120 w-full items-center bg-slate-50 py-20">
 			<div class="container mx-auto px-4">
 				<div class="flex flex-col items-center gap-8 py-12 md:flex-row">
 					<div class="fade-in-image md:w-1/2">
@@ -76,7 +78,7 @@ import HelpingStudents from '../assets/HelpingStudents.png'
 						<h2 class="text-4xl font-bold md:text-5xl lg:text-6xl">More For You</h2>
 						<p class="text-md mt-4 leading-relaxed text-gray-700 md:text-lg lg:text-xl">
 							Our efforts over the past 8 years have resulted in over <strong
-								class="bg-gradient-to-t from-slate-600 to-green-700 bg-clip-text text-4xl font-bold leading-relaxed text-transparent"
+								class="bg-linear-to-t from-slate-600 to-green-700 bg-clip-text text-4xl leading-relaxed font-bold text-transparent"
 								>$1,000,000</strong
 							>
 							in savings for the graduate student body.
@@ -87,7 +89,7 @@ import HelpingStudents from '../assets/HelpingStudents.png'
 		</section>
 
 		<!-- Student-Centric Section -->
-		<section class="fade-in-section relative flex min-h-[30rem] w-full items-center bg-slate-800 py-20">
+		<section class="fade-in-section relative flex min-h-120 w-full items-center bg-slate-800 py-20">
 			<div class="container mx-auto px-4">
 				<div class="flex flex-col items-center gap-8 md:flex-row">
 					<div class="fade-in-text prose md:w-1/2">
@@ -117,7 +119,7 @@ import HelpingStudents from '../assets/HelpingStudents.png'
 		</section>
 
 		<!-- Contact Section -->
-		<section class="fade-in-section relative flex min-h-[30rem] w-full flex-col items-center bg-gray-100 py-20">
+		<section class="fade-in-section relative flex min-h-120 w-full flex-col items-center bg-slate-50 py-20">
 			<div class="container mx-auto px-4">
 				<div class="fade-in-text flex flex-col items-center gap-8">
 					<h2 class="text-4xl font-bold md:text-5xl lg:text-6xl">Contact Us</h2>
@@ -142,7 +144,7 @@ import HelpingStudents from '../assets/HelpingStudents.png'
 		const handleIntersection: IntersectionObserverCallback = (entries, observer) => {
 			entries.forEach((entry) => {
 				if (entry.isIntersecting) {
-					console.log('is intersecting')
+					// console.log('is intersecting')
 					entry.target.classList.add('visible')
 					observer.unobserve(entry.target)
 				}
@@ -168,12 +170,12 @@ import HelpingStudents from '../assets/HelpingStudents.png'
 		}
 
 		document.addEventListener('astro:page-load', () => {
-			console.log('page loaded')
+			// console.log('page loaded')
 			setUpIntersectionObserver()
 		})
 
 		document.addEventListener('DOMContentLoaded', () => {
-			console.log('DOMContentLoaded')
+			// console.log('DOMContentLoaded')
 			setUpIntersectionObserver()
 		})
 	</script>
